# vllm

./: CMakeLists.txt  LICENSE  MANIFEST.in  NOTICE  README.md  env.sh  format.sh  pyproject.toml  setup.py  test-typo.py  test-typo.py.bak  test-typos.toml
.github/workflows/: detect-duplicate-issues.yml  detect-duplicate-prs.yml
benchmarks/kernels/: benchmark_moe.py
cmake/: cpu_extension.cmake  utils.cmake
cmake/external_projects/: vllm_flash_attn.cmake
csrc/: activation_kernels.cu  cache.h  cache_kernels.cu  cuda_compat.h  custom_all_reduce.cuh  ops.h  torch_bindings.cpp
csrc/attention/: attention_kernels.cuh  attention_utils.cuh  dtype_float16.cuh  paged_attention_v1.cu  paged_attention_v2.cu
csrc/cutlass_extensions/: common.hpp
csrc/moe/: moe_align_sum_kernels.cu  moe_ops.cpp  moe_ops.h  moe_wna16.cu  moe_wna16_utils.h  topk_softmax_kernels.cu  torch_bindings.cpp
docker/: Dockerfile.peter-test
requirements/: build.txt  common.txt  cuda.txt  docs.txt
tests/utils_/: test_deep_gemm_utils.py
tmp/typos-test/: test.py
tools/dup_ci_playground/: duplicate_probe.md  unrelated_beta.md  unrelated_probe.md
vllm/utils/: deep_gemm.py
vllm_metax_plugin/: __init__.py  _custom_ops.py  config.py  envs.py  platform.py  utils.py  version.py
vllm_metax_plugin/device_allocator/: cumem.py
vllm_metax_plugin/distributed/: parallel_state.py
vllm_metax_plugin/models/: __init__.py  baichuan.py  baichuan_moe.py  deepseek.py  deepseek_v2.py  mimo.py  mimo_mtp.py  qwen.py  qwen3.py  qwen3_moe.py  telechat.py
vllm_metax_plugin/patch/: __init__.py  hook_deferred.py  hook_proxy.py  (+2 more)
(+116 files in other folders)
